# lessons_pytest

./: .gitignore  README.md  pyproject.toml
src/enums/: errors.py
tests/: test_something.py
tests/base/: response.py
tests/enums/: errors.py
tests/schemas/: Posts.py
