[tool.poetry]
name = "lessons-pytest"
version = "0.1.0"
description = ""
authors = ["Artem Vinogradov <vin-art@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest =  "^7.4.1"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
